--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,7 @@
+---
+
+# https://docs.stack.jimmycai.com/
+
 baseurl: https://www.procamora.com
 languageCode: es
 defaultContentLanguage: es
@@ -5,7 +9,7 @@ theme: hugo-theme-stack
 paginate: 5
 title: "#> fireroot"
 enableRobotsTXT: true
-
+editURL : ""
 #outputs:
 #  home:
 #    - HTML
@@ -14,7 +18,6 @@ enableRobotsTXT: true
 
 
 languages:
-  #    zh-cn:
   es:
     languageName: Español
     contentDir: content/es
@@ -58,7 +61,7 @@ params:
     - post
   featuredImageField: image
   rssFullContent: true
-  favicon: /img/favicon.png
+  favicon: img/procamora.png
 
   footer:
     since: 2020
@@ -154,11 +157,17 @@ menu:
       params:
         icon: brand-github
 
-    - identifier: twitter
-      name: Twitter
-      url: https://twitter.com/procamora
+    - identifier: linkedin
+      name: Linkedin
+      url: https://es.linkedin.com/in/pablo-rocamora
       params:
-        icon: brand-twitter
+        icon: brand-linkedin
+
+    - identifier: mail
+      name: Gmail
+      url: mailto:pablojoserocamora@gmail.com
+      params:
+        icon: brand-gmail  # https://fontawesomeicons.com/svg/icons/brand-gmail
 
 related:
   includeNewer: true
